@@ -213,6 +213,11 @@ mat-checkbox label{
     margin-bottom: 0;
 }
 
+.mat-select-search-inside-mat-option .mat-select-search-clear {
+    top: 0px !important;
+    right: 0px !important;
+}
+
 @media (max-width: 992px) {
     .pagination {
         .pagination__chevron-container {
